tests/ui/suggestions/recover-invalid-float.stderr
error: float literals must have an integer part
  --> $DIR/recover-invalid-float.rs:4:18
   |
LL |     let _: f32 = .3;
   |                  ^^ help: must have an integer part: `0.3`

error: float literals must have an integer part
  --> $DIR/recover-invalid-float.rs:6:18
   |
LL |     let _: f32 = .42f32;
   |                  ^^^^^^ help: must have an integer part: `0.42f32`

error: float literals must have an integer part
  --> $DIR/recover-invalid-float.rs:8:18
   |
LL |     let _: f64 = .5f64;
   |                  ^^^^^ help: must have an integer part: `0.5f64`

error: aborting due to 3 previous errors

